Fix header on default pages on mobile

--- a/admin-dev/themes/default/scss/partials/_nav.scss
+++ b/admin-dev/themes/default/scss/partials/_nav.scss
@@ -34,7 +34,6 @@
 
   &.mobile-nav {
     width: 70%;
-    margin-top: $size-header-height + (0.625rem * 2);
     margin-left: -100%;
 
     &::before {
